<resources>
    <string name="app_name">Android_ FSI</string>
    <string name="pas_de_compte">Pas de compte? </string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="adresse_e_mail">Adresse e-mail</string>
    <string name="s_inscire"> S\'inscire</string>
    <string name="connexion">Connexion</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié?</string>
    <string name="ou">ou</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coef_1">COEF 1</string>
    <string name="_18">18</string>
    <string name="_12_02_2023">12/02/2023</string>
    <string name="date_de_visite">Date de visite</string>
    <string name="entreprise">ENTREPRISE</string>
    <string name="dossier">DOSSIER</string>
    <string name="oral">ORAL</string>
    <string name="tr_s_bien">Très bien</string>
    <string name="remarques_ventuelles">REMARQUES ÉVENTUELLES</string>
    <string name="erreurConnexion">Identifiant ou mot de passe incorrect</string>
    <string name="_2021_2023">© 2021-2023</string>
    <string name="fasters">Fasters</string>
    <string name="e_mail">E-mail</string>
    <string name="pr_nom">Prénom</string>
    <string name="confirmer_le_mot_de_passe">Confirmer le mot de passe</string>
    <string name="login">Login</string>
    <string name="Confirmer_le_mot_de_passe">Confirmer le mot de passe</string>
    <string name="succ_s_erreur_d_enregistrement">Succès/Erreur d\'enregistrement</string>
    <string name="changer_de_mot_de_passe">Changer de mot de passe</string>
    <string name="enregistrer_les_modifications">enregistrer les modifications</string>
    <string name="profil_picture">Profil Picture</string>
    <string name="nom">Nom</string>
    <string name="consulter_mes_notes">consulter mes notes</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="voir_mes_infos">Voir mes infos</string>
    <string name="augustin_brugere">Augustin Brugere</string>
    <string name="_2sio">2SIO</string>
    <string name="mon_espace_eleve">Mon espace élève</string>
    <string name="code_postal">Code Postal :</string>
    <string name="num_ro_de_rue">Numéro de rue :</string>
    <string name="nom_de_la_rue">Nom de la rue :</string>
    <string name="ville">Ville :</string>
    <string name="loginInfo">Login :</string>
    <string name="prenom">Prénom :</string>
    <string name="nomInfo">Nom :</string>
    <string name="telephone">Telephone :</string>
    <string name="email">Email :</string>
    <string name="classe">Classe :</string>
    <string name="sp_cialit">Spécialité :</string>
    <string name="ma_tre_de_stage">Maître de stage :</string>
    <string name="entrepriseInfo">Entreprise :</string>
    <string name="professeur">Professeur :</string>
    <string name="aucune">aucune</string>
    <string name="date">DATE</string>
    <string name="mes_informations">mes informations</string>
    <string name="mes_informations_gros">MES INFORMATIONS</string>
    <string name="bilan_2">BILAN 2</string>
    <string name="bilan_1">BILAN 1</string>
</resources>